# slide-presentation-app

./: .gitignore  .prettierrc  .sdd-config.json  CHANGELOG.ja.md  CHANGELOG.md  CLAUDE.md  README.ja.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  presenter-view.html  tsconfig.json  vite.config.ts
.claude/: settings.json
.claude/rules/: ai-sdd-instructions.md
.github/workflows/: ci.yml  screenshots.yml
.sdd/: AI-SDD-PRINCIPLES.md  CONSTITUTION.md  DESIGN_DOC_TEMPLATE.md  PRD_TEMPLATE.md  SPECIFICATION_TEMPLATE.md
.sdd/.cache/: index.json  index.md  index.sqlite
.sdd/requirement/: auto-scroll-progress-bar.md  auto-scroll-timer.md  builtin-ui-components.md  image-component.md  language-settings.md  package-embedded-addon.md  presentation-foundation.md  presenter-view.md  slide-content-customization.md  slide-edit-mode.md  speaker-note-audio.md  visual-addon.md
.sdd/specification/: auto-scroll-progress-bar_design.md  auto-scroll-progress-bar_spec.md  (+22 more)
addons/: vite.config.ts
e2e/: README.md  fixtures.ts  home.spec.ts  layouts.spec.ts  presentation.spec.ts  presenter-view.spec.ts  settings.spec.ts
scripts/: export-slides-readme-template.md  export-slides.mjs  generate-docs-pdf.mjs  generate-icons.mjs
src/: App.tsx  addon-bridge.ts  addonLoader.ts  applyTheme.ts  editModeSave.ts  localSlideLoader.ts  main.tsx  presenterViewEntry.tsx  reveal.d.ts  test-setup.ts  theme.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
(+133 files in other folders)
