[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
# preserve_order: オブジェクトのキーを挿入順で保持し、extract_asset_paths のアセット走査順を
# JS(export-slides.mjs の Object.values=挿入順) と一致させる（DC-003・lib.rs のコメント「出現順を保持」を実挙動と整合）
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2.5.1"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-store = "2.4.3"
flate2 = "1.1.9"
tar = "0.4.46"
